# butterscotch-y2k1

./: CMakeLists.txt  README.md  build.bat  butterscotch_n64.pak
alt_assets/contents/sav/: placeholder.txt  sav_format_v0.md
assets/: CONFIG.JSN
assets/contents/graphics/dummy image/: example.h  h_viewer.py  view_h.bat
assets/engine/fallback/: dummy.h  placeholder.txt
src/butterscotch/: binary_reader.d  binary_utils.h  collision.h  common.h  data_win.d  data_win.h  data_win_print.c  debug_overlay.c  input_recording.c  input_recording.h  instance.h  noop_file_system.c  overlay_file_system.c  placeholder.txt  renderer.h  runner.c  runner.h  spatial_grid.c  text_utils.h  vm.c  vm.h  vm_builtins.c  vm_builtins.h
src/butterscotch/audio/miniaudio/: ma_audio_system.c
src/butterscotch/audio/ps2/: ps2_audio_system.c
src/butterscotch/sdl/: main.c
src/platform/: runner_gamepad.h
src/platform/butterscotch/: bytecode_versions.h  file_system.h  gml_array.c
src/platform/butterscotch/audio/openal/: al_audio_system.c  al_audio_system.h
src/platform/engine/: placeholder.txt
src/platform/glfw/: debugscreen.c  debugscreen.h  dummygraphics.c  dummygraphics.h  gl3d.c  gl3d.h  gl_common.c  gl_common.h  gl_legacy_renderer.c  gl_renderer.c  glfw_file_system.c  glfw_file_system.h  main.c
src/platform/n64/: contententry.c  contententry.h  debug_font_renderer.c  debug_font_renderer.h  fm_contenttable.h  main.c  main.h  n64_audio.c  n64_audio.h  n64_datawin.c  n64_datawin.h  n64_soundbank.h  ova_n64.c  ova_n64.h
src/platform/ps2/: gs_renderer.c  gs_renderer_flat.c  gs_renderer_flat.h  main.c  ps2_audio_system.c  ps2_audio_system.h  ps2_file_system.c
